# ai-journal-paper

./: CMakeLists.txt  README.md
cpp/: CMakeLists.txt  README.md  cg.cpp  heat-shared-fixed.cpp  heat-shared.cpp  integration.cpp  plot.py  result_heat_shared.txt
cuda/: CMakeLists.txt  README.md  cg.cu  heat_cuda.cu  heat_cuda_fixed.cu  integration_cuda_amepere.cu  integration_cuda_generic.cu
cuda_ampere/: CMakeLists.txt  README.md
deepseek/: README.md  conjugate_gradient.m  conjugate_gradient.r  numerical_integration.cpp  numerical_integration.f  numerical_integration.m  numerical_integration.py  numerical_integration.r  phe.m  phe.r
documentation/cpp/: cg.cpp  heat.cpp
documentation/fortran/: cg.f90  heat.f90
documentation/matlab/: heat.m
documentation/r/: cg.r  heat.r
fortran/: CMakeLists.txt  README.md  cg-fixed.f90  cg.f90  heat-distributed.f90  heat-shared-fixed.f90  heat-shared.f90  integration.f  result_heat_shared.txt
matlab/: Readme.md  cg.m  heat-shared.m  integration-fixed.m  integration.m  phe
python/: README.md  cg.py  heat-distributed.py  heat-shared-fixed.py  heat-shared.py  integration-eval.py  integration-plain.py  integration.py
r/: cg.r  heat-shared.r  integration.r
testing/: CMakeLists.txt
testing/cpp/: CMakeLists.txt  cg.cpp  conjugate_gradient.h  heat.cpp  numerical_integration.cpp  riemann_sum.h
testing/python/: cg-test.py  heat-test.py  integration-test.py
translation/cpp/: CMakeLists.txt  README.md  cg.cpp  heat-distributed-fixed.cpp  heat-distributed.cpp  heat-shared.cpp  heat-shared.py  integration.cpp
translation/matlab/: cg.r  heat.py  heat.r  heat_fixed.py  heat_fixed.r  integration.py  integration.r  integration_fixed.py  integration_fixed.r
translation/python/: README.md  cg-fixed.py  cg.py  heat-distributed-fixed.py  heat-distributed.py  heat-shared.py  integration.py
